<resources>
    <string name="app_name">Reheimer</string>
    <string name="event_reminder">Event Reminder</string>
    <string name="save_the_date">Save The Date</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="add_an_event">Add an Event</string>
    <string name="button">Button</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="event_name">Event Name</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="start">Start</string>
    <string name="seen">seen</string>
    <string name="new_">new</string>
    <string name="points_text">Points: %1$d</string>
    <string name="lives_text">Lives: %1$d</string>
    <string name="game_over_text">You earned %1$d points!</string>
    <string name="cancel_verbal">cancel</string>
    <string name="game_info">Verbal Memory Game</string>
    <string name="game_info_context">There will be words on the screen, one at a time. If you have seen the word click seen,
     if it is a new word click new.</string>
    <string name="game_over">GAME OVER</string>

    <string-array name="word_list">
        <item>word</item>
        <item>damn</item>
        <item>hey</item>
        <item>hello</item>
        <item>place</item>
        <item>holder</item>
        <item>cat</item>
        <item>dog</item>
        <item>animal</item>
        <item>sky</item>
        <item>wow</item>
        <item>yes</item>
        <item>hair</item>
        <item>answer</item>
        <item>lazy</item>
        <item>home</item>
        <item>weapon</item>
        <item>term</item>
        <item>power</item>
        <item>pass</item>
        <item>door</item>
        <item>table</item>
        <item>talk</item>
        <item>dude</item>
        <item>screen</item>
        <item>detector</item>
        <item>test</item>
        <item>fair</item>
        <item>water</item>
        <item>fire</item>
        <item>beautiful</item>
        <item>item</item>
        <item>empty</item>
        <item>tag</item>
        <item>rock</item>
        <item>normal</item>
        <item>coffee</item>
        <item>quick</item>
        <item>editor</item>
        <item>problem</item>
    </string-array>
</resources>