<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".AddEventActivity">


    <TextView
        android:id="@+id/addEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/add_an_event"
        android:textColor="@color/black"
        android:textSize="36sp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center"
            android:scaleY="0.7"
            android:scaleX="0.7"
            android:layout_marginHorizontal="-30dp"/>
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center"
            android:scaleY="0.7"
            android:scaleX="0.7"
            android:layout_marginHorizontal="-30dp"/>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Details" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addEventBtn"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/add"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/cancelEventBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/cancel"/>
</LinearLayout>